# CAD_Generation_Agent

./: .gitignore  README.md  langgraph.json  pyproject.toml
notebooks/: Coder.ipynb  Connected_Agent.ipynb  MCP_Evaluator.ipynb  intention_clarification.ipynb  planning.ipynb  utils.py
src/cad_agent_from_scratch/: cad_shared_state.py  coding_state.py  coding_workflow.py  design_intent_state.py  design_intent_workflow.py  design_planning_state.py  design_planning_workflow.py  exception.py  logger.py  mcp_eval_state.py  mcp_eval_workflow.py  prompts.py  prompts_new.py  utils.py
