[project]
name = "cad_agent_from_scratch"
version = "0.1.0"
description = "Agentic CAD generation workflow built from scratch using LangGraph"
requires-python = ">=3.11,<3.14"

dependencies = [
    # Core agent orchestration
    "langgraph>=1.0.0",

    # LLM framework
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-community>=0.4",

    # MCP adapter layer
    "langchain-mcp-adapters>=0.1.0",

    # State / intent modeling
    "pydantic>=2.0.0",

    # Notebook-first workflow
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",

    # Developer experience
    "rich>=14.0.0",
]

[project.optional-dependencies]

# 🔑 MCP stack (OpenSCAD execution + stdio client)
mcp = [
    "fastmcp>=0.4.0",          # MCP server runner
    "mcp>=0.1.0",              # MCP Python client
    "pywin32; platform_system == 'Windows'",  # Required for stdio on Windows
]

# Dev / tooling
dev = [
    "mypy>=1.11.1",
    "ruff>=0.6.1",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cad_agent_from_scratch"]

[tool.setuptools.package-dir]
"cad_agent_from_scratch" = "src/cad_agent_from_scratch"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",
    "F",
    "I",
    "D",
    "D401",
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"